<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/back">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/ic_baseline_arrow_back_ios_24"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_card"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:fontFamily="@font/arvo"
                            android:textColor="@color/black_dark"
                            android:textSize="@dimen/dp_20"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/starRatingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-2dp"
                            android:layout_marginTop="@dimen/dp_6"
                            android:numStars="5"
                            android:theme="@style/RatingBar" />

                        <TextView
                            android:id="@+id/tvStarRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_2"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_20" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_5"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/LanguageValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_2"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/release_date"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ReleaseDateValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_2"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/release_status"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ReleaseStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_2"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_18"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_12"
                            android:text="@string/synopsis"
                            android:textColor="@color/black_dark"
                            android:textSize="@dimen/sp_20"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/valueSynopsis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_12"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp_15"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_18"
                        android:layout_marginEnd="@dimen/dp_18"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/production_house"
                            android:textColor="@color/black_dark"
                            android:textSize="@dimen/sp_20"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/castButton"
                                    android:layout_width="@dimen/dp_130"
                                    android:layout_height="@dimen/dp_50"
                                    android:layout_margin="@dimen/dp_20"
                                    android:background="@color/primary"
                                    android:backgroundTint="@color/primary"
                                    app:cardCornerRadius="@dimen/dp_10"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/cast"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_12sdp" />
                                </androidx.cardview.widget.CardView>

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/reviewButton"
                                    android:layout_width="@dimen/dp_130"
                                    android:layout_height="@dimen/dp_50"
                                    android:layout_margin="@dimen/dp_20"
                                    android:background="@color/primary"
                                    android:backgroundTint="@color/primary"
                                    app:cardCornerRadius="@dimen/dp_10"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/review"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_12sdp" />
                                </androidx.cardview.widget.CardView>

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_12"
                                android:text="@string/similar_movies"
                                android:textColor="@color/black_dark"
                                android:textSize="@dimen/sp_20"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_30sdp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
